# cpython

./: CMakeLists.txt  Makefile.pre.in  configure  configure.ac  cython_test.pyx  demo_audit.py  setup.py  test_ale.py  test_cython_subinterpreters.py
Doc/c-api/: sys.rst
Grammar/: Grammar  Tokens  python.gram
Include/: Python-ast.h  graminit.h  listobject.h  object.h  opcode.h  patchlevel.h  token.h
Include/internal/: pycore_pylifecycle.h  pycore_pystate.h
Lib/: cython_test.pyx  opcode.py  pickle.py  subprocess.py  token.py  tokenize.py  typing.py
Lib/importlib/: _bootstrap_external.py
Lib/lib2to3/pgen2/: grammar.py
Lib/test/: test_generators.py  test_inspect.py
Modules/: _pickle.c  _winapi.c  _xxsubinterpretersmodule.c  arraymodule.c  posixmodule.c  socketmodule.c
Modules/_ctypes/: callproc.c
Objects/: fileobject.c  floatobject.c  object.c  typeobject.c  unicodeobject.c
PCbuild/: pythoncore.vcxproj  pythoncore.vcxproj.filters
Parser/: Python.asdl  asdl_c.py  parsetok.c  token.c  tokenizer.c
Parser/pegen/: parse.c
Parser/pgen/: __main__.py  automata.py  graph.py  pgen.py
Python/: Python-ast.c  ast.c  bltinmodule.c  ceval-profile.c  ceval.c  compile.c  graminit.c  import.c  importlib.h  importlib_external.h  importlib_zipimport.h  opcode_targets.h  pylifecycle.c  pystate.c  pythonrun.c  symtable.c  sysmodule.c
Python/clinic/: import.c.h
Tools/scripts/: generate_opcode_h.py
demo/: README.md  bad.yaml  bad_module.py  demo_audit.py  hello.py
